--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "umerlibrary",
+  "name": "librarysystem",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-     "start": "node server.js",
-     "dev": "nodemon server.js",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
