--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "bin": "index.js",
   "scripts": {
      "start": "node server.js",
-     "dev": "nodemon server.js"
+     "dev": "nodemon server.js",
+     "seed": "node scripts/seedBooks.js"
   },
   "keywords": [],
   "author": "",
